fastapp/fastapp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fastapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 12350
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapp
spec:
  hosts:
  - "*"
  gateways:
  - fastapp-gateway
  http:
  - route:
    - destination:
        host: fastapp
        port:
          number: 8000
